API and Endpoints fixes
